[project]
name = "matryoshka-clt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kevin Lu", email = "kevinlu.email@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0.0",
    "transformer-lens>=2.16.1",
]

[project.scripts]
matryoshka-clt = "matryoshka_clt.cli:main"

[dependency-groups]
default = [
    "torch>=2.2",
    "numpy>=1.26",
    "tqdm>=4.66",
    "safetensors>=0.4",
    "transformer-lens>=2.16.0",
    "transformers>=4.50.0",
    "datasets>=2.20.0",
    "wandb>=0.17",
    "huggingface_hub>=0.24",
]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
